--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             cursor: pointer;
         }
         .api-key-input button:hover { background: #b45309; }
+        .api-key-input button.clear { background: #ef4444; }
+        .api-key-input button.clear:hover { background: #dc2626; }
         .status {
             display: inline-block;
             padding: 6px 12px;
@@ -199,6 +201,7 @@
             <div class="api-key-input">
                 <input type="password" id="apiKeyInput" placeholder="sk-ant-api03-...">
                 <button onclick="saveApiKey()">Save Key</button>
+                <button class="clear" onclick="clearApiKey()">Clear Key</button>
             </div>
             <div class="status waiting" id="apiStatus">Waiting for API key...</div>
         </div>
@@ -262,6 +265,18 @@
             enableScanning();
         }
 
+        function clearApiKey() {
+            localStorage.removeItem('anthropic_api_key');
+            apiKey = '';
+            document.getElementById('apiKeyInput').value = '';
+            document.getElementById('apiStatus').textContent = 'Waiting for API key...';
+            document.getElementById('apiStatus').className = 'status waiting';
+            document.getElementById('uploadArea').classList.add('disabled');
+            document.getElementById('apiKeyPanel').style.background = '#fef3c7';
+            document.getElementById('apiKeyPanel').style.borderColor = '#fbbf24';
+            alert('API key cleared!');
+        }
+
         function enableScanning() {
             document.getElementById('apiStatus').textContent = '✅ API Key Saved';
             document.getElementById('apiStatus').className = 'status ready';
@@ -310,7 +325,7 @@
                 document.getElementById('loadingText').textContent = 'Analyzing card with Claude...';
 
                 // Call Claude API
-                const response = await fetch('https://api.anthropic.com/v1/messages', {
+                const response = await fetch('https://boba-scanner.vercel.app//api/anthropic', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
