--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,10 @@
                     const data = await callAPI(compressed);
                     setProgress(85);
                     
-                    const cardNum = JSON.parse(data.content[0].text.replace(/```json|```/g, '').trim()).cardNumber;
+                    const parsed = JSON.parse(data.content[0].text.replace(/```json|```/g, '').trim());
+                    const cardNum = parsed.cardNumber;
+                    console.log('Claude returned card number:', cardNum);  // ✅ add this
+                    console.log('Sample DB entries:', database.slice(0, 3).map(c => c['Card Number']));  // ✅ add this
                     const match = findCard(cardNum);
                     
                     if (match) {
@@ -1582,5 +1585,6 @@
     </script>
 </body>
 </html>
+
 
 
