--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
             </div>
 
             <div class="action-bar hidden" id="actionBar">
-                <button class="btn btn-secondary" onclick="openSettings()">⚙️</button>
-                <button class="btn btn-danger" onclick="clearCurrentCollection()">🗑️</button>
+                <!-- Action bar content will be dynamically updated by updateActionBar() -->
             </div>
 
             <div class="cards-grid" id="cardsGrid"></div>
@@ -242,6 +241,7 @@
     <script src="js/scanner.js"></script>
     <script src="js/export.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/statistics.js"></script>  <!-- NEW: Added statistics module -->
     <script src="js/app.js"></script>
 </body>
 </html>
