--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     </div>
 
     <!-- External Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
+   <!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script> -->
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
     <script src="https://docs.opencv.org/4.5.2/opencv.js" async></script>
@@ -284,8 +284,8 @@
     <script src="js/statistics.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/google-auth.js"></script>
-    <script src="js/user-management.js"></script>
-    <script src="js/admin-dashboard.js"></script>
+   <!-- <script src="js/user-management.js"></script> -->
+    <!--<script src="js/admin-dashboard.js"></script> -->
     <script src="js/batch-scanner.js"></script>
     <script src="js/app.js"></script>
 </body>
