--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <script src="js/statistics.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/google-auth.js"></script>
-   <!-- <script src="js/user-management.js"></script> -->
+    <script src="js/user-management.js"></script>
     <!--<script src="js/admin-dashboard.js"></script> -->
     <script src="js/batch-scanner.js"></script>
     <script src="js/app.js"></script>
