--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                         </div>
                         <img class="user-avatar" id="userAvatar" alt="User" onclick="toggleUserMenu()">
                         <button class="btn-sign-out" onclick="signOut()">Sign Out</button>
+                   <!-- Before closing </body> tag -->
+                        <script src="js/ui-enhancements.js"></script>
                     </div>
                 </div>
             </div>
