--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Bo Jackson Card Scanner | AI-Powered Card Recognition</title>
     
     <!-- Redesigned Styles -->
-    <link rel="stylesheet" href="styles-redesigned.css">
+    <link rel="stylesheet" href="styles.css">
     
     <!-- Keep original functionality scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
