--- a/index.html
+++ b/index.html
@@ -227,18 +227,19 @@
     </div>
     
     <!-- Scripts -->
-    <script src="js/config.js"></script>
-    <script src="js/database.js"></script>
-    <script src="js/ocr.js"></script>
-    <script src="js/opencv.js"></script>
-    <script src="js/collections.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/scanner.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/google-auth.js"></script>
-    <script src="js/user-management.js"></script>
-    <script src="js/admin-dashboard.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/ui-enhancements.js"></script>
+<script src="js/state.js"></script>
+<script src="js/config.js"></script>
+<script src="js/database.js"></script>
+<script src="js/ocr.js"></script>
+<script src="js/opencv.js"></script>
+<script src="js/collections.js"></script>
+<script src="js/api.js"></script>
+<script src="js/scanner.js"></script>
+<script src="js/ui.js"></script>
+<script src="js/google-auth.js"></script>
+<script src="js/user-management.js"></script>
+<script src="js/admin-dashboard.js"></script>
+<script src="js/app.js"></script>
+<script src="js/ui-enhancements.js"></script>
 </body>
 </html>
