--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#2563eb">
     
     <!-- iOS Web App -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎴</text></svg>">
     <meta name="apple-mobile-web-app-title" content="Card Scanner">
     
     <title>Bo Jackson Card Scanner | AI-Powered Card Recognition</title>
