--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
     <script src="js/statistics.js"></script>
     <script src="js/export.js"></script>
     <script src="js/batch-scanner.js"></script>
+    <script src="js/sync.js"></script>        <!-- cloud sync -->
     <script src="js/app.js"></script>         <!-- MUST BE LAST: orchestrates init -->
     <script src="js/ui-enhancements.js"></script>
 </body>
